Match-id-5a8ff2d1bcb4fa28e95f071a5138b64a7d573436

--- a/api/external/api-qos.yaml
+++ b/api/external/api-qos.yaml
@@ -7,7 +7,8 @@ tags:
 paths:
   /v1/qos:
     delete:
-      x-product: OceanProtect X
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -52,7 +53,8 @@ paths:
       operationId: delete_qos_v1_qos_delete
       summary: 批量删除指定Qos策略
     get:
-      x-product: OceanProtect X
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -109,7 +111,8 @@ paths:
       operationId: query_resources_v1_qos_get
       summary: 分页查询Qos策略列表
     post:
-      x-product: OceanProtect X
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -150,7 +153,8 @@ paths:
       summary: 创建Qos策略
   /v1/qos/{qos_id}:
     get:
-      x-product: OceanProtect X
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -187,7 +191,8 @@ paths:
       operationId: get_qos_v1_qos__qos_id__get
       summary: 查询指定Qos策略
     put:
-      x-product: OceanProtect X
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
