Match-id-02c028bfa217841a6a1c25eda12b7735a7967e46

--- a/api/internal/api-backup-wf.yaml
+++ b/api/internal/api-backup-wf.yaml
@@ -8,7 +8,7 @@ paths:
   /v1/internal/workflows/backup/result:
     put:
       x-dr-role: 'N'
-      x-product: CyberEngine,OceanProtect X
+      x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 30092
