Match-id-a4f67fb947bf4351984aebdcf42c0e4f0fdd96f9

--- a/api/external/api-protect-agent.yaml
+++ b/api/external/api-protect-agent.yaml
@@ -355,7 +355,8 @@ paths:
             - global
   /v1/internal/agent/cluster-ip:
     put:
-      x-product: OceanProtect X
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 30081
