--- a/api/internal/api-liveMount-internal.yaml
+++ b/api/internal/api-liveMount-internal.yaml
@@ -16,16 +16,17 @@ tags:
 paths:
   /v1/internal/live-mount-policy/action/verify:
     get:
+      x-dr-role: 'N'
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
-      x-access-port: 25081
-      x-auth-required: 'Y'
+      x-access-port: 30081
+      x-auth-required: 'N'
       x-rd-admin-role: 'N'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
       x-public-api: 'N'
-      x-sysadmin-role: 'Y'
-      x-product: CyberEngine,OceanProtect X
+      x-sysadmin-role: 'N'
+      x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       tags:
         - live-mount-ownership-verify-controller
       summary: verifyLiveMountPolicyOwnership
@@ -62,7 +63,7 @@ paths:
   /v1/internal/live-mount/action/cancel:
     put:
       x-dr-role: 'N'
-      x-product: CyberEngine,OceanProtect X
+      x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 30081
@@ -115,7 +116,7 @@ paths:
       x-dp-admin-role: 'N'
       x-public-api: 'N'
       x-sysadmin-role: 'N'
-      x-product: CyberEngine,OceanProtect X
+      x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       tags:
         - live-mount-internal-controller
       summary: revokeLiveMountUserId
@@ -147,16 +148,17 @@ paths:
       deprecated: false
   /v1/internal/live-mount/action/verify:
     get:
+      x-dr-role: 'N'
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
-      x-access-port: 25081
-      x-auth-required: 'Y'
+      x-access-port: 30081
+      x-auth-required: 'N'
       x-rd-admin-role: 'N'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
       x-public-api: 'N'
-      x-sysadmin-role: 'Y'
-      x-product: CyberEngine,OceanProtect X
+      x-sysadmin-role: 'N'
+      x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       tags:
         - live-mount-ownership-verify-controller
       summary: verifyLiveMountOwnership
@@ -202,7 +204,7 @@ paths:
       x-dp-admin-role: 'N'
       x-public-api: 'N'
       x-sysadmin-role: 'N'
-      x-product: CyberEngine,OceanProtect X
+      x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       tags:
         - live-mount-policy-internal-controller
       summary: revokeLiveMountPolicyUserId
